Saved Jupyter notebook 'notebook editor for compute_corpus_for_knowledge_engineering'

--- a/ipython_notebooks/notebook editor for compute_corpus_for_knowledge_engineering.ipynb
+++ b/ipython_notebooks/notebook editor for compute_corpus_for_knowledge_engineering.ipynb
@@ -18,14 +18,14 @@
       "nbconvert_exporter": "python",
       "file_extension": ".py"
     },
+    "modifiedBy": "ludovic.bocken@cgi.com",
     "createdOn": 1738686158938,
     "creator": "ludovic.bocken@cgi.com",
     "associatedRecipe": "compute_corpus_for_knowledge_engineering",
     "tags": [
       "recipe-editor"
     ],
-    "customFields": {},
-    "modifiedBy": "ludovic.bocken@cgi.com"
+    "customFields": {}
   },
   "nbformat": 4,
   "nbformat_minor": 1,
