--- a/ipython_notebooks/notebook editor for compute_corpus_for_knowledge_engineering.ipynb
+++ b/ipython_notebooks/notebook editor for compute_corpus_for_knowledge_engineering.ipynb
@@ -1,16 +1,29 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
   "metadata": {
     "kernelspec": {
+      "name": "py-dku-containerized-venv-markitdown-scw-fa",
       "display_name": "Python in SCW-FA (env markitdown)",
-      "language": "python",
-      "name": "py-dku-containerized-venv-markitdown-scw-fa"
+      "language": "python"
     },
-    "associatedRecipe": "compute_corpus_for_knowledge_engineering",
+    "hide_input": false,
+    "language_info": {
+      "name": "python",
+      "version": "3.11.10",
+      "mimetype": "text/x-python",
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "pygments_lexer": "ipython3",
+      "nbconvert_exporter": "python",
+      "file_extension": ".py"
+    },
     "dkuGit": {
       "lastInteraction": 0
     },
+    "createdOn": 1738686158938,
+    "creator": "ludovic.bocken@cgi.com",
+    "associatedRecipe": "compute_corpus_for_knowledge_engineering",
     "creationTag": {
       "versionNumber": 0,
       "lastModifiedBy": {
@@ -18,13 +31,14 @@
       },
       "lastModifiedOn": 1738686158938
     },
-    "creator": "ludovic.bocken@cgi.com",
-    "createdOn": 1738686158938,
     "tags": [
       "recipe-editor"
     ],
-    "customFields": {}
+    "customFields": {},
+    "modifiedBy": "ludovic.bocken@cgi.com"
   },
+  "nbformat": 4,
+  "nbformat_minor": 1,
   "cells": [
     {
       "cell_type": "markdown",
@@ -34,16 +48,13 @@
       ]
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
-        "# -*- coding: utf-8 -*-\n",
-        "import dataiku\n",
-        "import pandas as pd, numpy as np\n",
-        "from dataiku import pandasutils as pdu"
-      ]
+        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd, numpy as np\nfrom dataiku import pandasutils as pdu"
+      ],
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -53,22 +64,13 @@
       ]
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
-        "A220_tech_docs_text \u003d dataiku.Folder(\"rhnW9xGx\")\n",
-        "A220_tech_docs_text_info \u003d A220_tech_docs_text.get_info()\n",
-        "# Assuming the folder contains text files, we can read them into a DataFrame\n",
-        "\n",
-        "file_paths \u003d A220_tech_docs_text.list_paths_in_partition()\n",
-        "texts \u003d []\n",
-        "\n",
-        "for file_path in file_paths:\n",
-        "    with A220_tech_docs_text.get_download_stream(file_path) as f:\n",
-        "        texts.append(f.read().decode(\u0027utf-8\u0027))"
-      ]
+        "A220_tech_docs_text \u003d dataiku.Folder(\"rhnW9xGx\")\nA220_tech_docs_text_info \u003d A220_tech_docs_text.get_info()\n# Assuming the folder contains text files, we can read them into a DataFrame\n\nfile_paths \u003d A220_tech_docs_text.list_paths_in_partition()\ntexts \u003d []\n\nfor file_path in file_paths:\n    with A220_tech_docs_text.get_download_stream(file_path) as f:\n        texts.append(f.read().decode(\u0027utf-8\u0027))"
+      ],
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -78,28 +80,22 @@
       ]
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "clean_texts \u003d texts"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
-        "# Compute recipe outputs\n",
-        "# TODO: Write here your actual code that computes the outputs\n",
-        "# NB: DSS supports several kinds of APIs for reading and writing data. Please see doc.\n",
-        "clean_texts \u003d [text.replace(\"\\n\\n\", \"\\\\pp\") for text in clean_texts]\n",
-        "clean_texts \u003d [text.replace(\"\\n\", \" \") for text in clean_texts]\n",
-        "clean_texts \u003d [text.replace(\"\\\\pp\", \"\\n\\n\") for text in clean_texts]\n",
-        "clean_texts \u003d [text.replace(\"\\x0c\", \"\\n\") for text in clean_texts]"
-      ]
+        "# Compute recipe outputs\n# TODO: Write here your actual code that computes the outputs\n# NB: DSS supports several kinds of APIs for reading and writing data. Please see doc.\nclean_texts \u003d [text.replace(\"\\n\\n\", \"\\\\pp\") for text in clean_texts]\nclean_texts \u003d [text.replace(\"\\n\", \" \") for text in clean_texts]\nclean_texts \u003d [text.replace(\"\\\\pp\", \"\\n\\n\") for text in clean_texts]\nclean_texts \u003d [text.replace(\"\\x0c\", \"\\n\") for text in clean_texts]"
+      ],
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -109,31 +105,40 @@
       ]
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "corpus_for_knowledge_engineering_df \u003d pd.DataFrame({\"text\": clean_texts})"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
         "corpus_for_knowledge_engineering_df"
-      ]
+      ],
+      "outputs": []
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
+      "source": [
+        "corpus_for_knowledge_engineering_df[\"doc_id\"] \u003d corpus_for_knowledge_engineering_df.index"
+      ],
+      "outputs": []
+    },
+    {
       "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
       "source": [
         "corpus_for_knowledge_engineering_df[\"text\"][2]"
-      ]
+      ],
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -143,14 +148,13 @@
       ]
     },
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
-        "corpus_for_knowledge_engineering \u003d dataiku.Dataset(\"corpus_for_knowledge_engineering\")\n",
-        "corpus_for_knowledge_engineering.write_with_schema(corpus_for_knowledge_engineering_df)"
-      ]
+        "corpus_for_knowledge_engineering \u003d dataiku.Dataset(\"corpus_for_knowledge_engineering\")\ncorpus_for_knowledge_engineering.write_with_schema(corpus_for_knowledge_engineering_df)"
+      ],
+      "outputs": []
     }
   ]
 }
