Saved Jupyter notebook 'notebook editor for compute_corpus_for_knowledge_engineering'

--- a/ipython_notebooks/notebook editor for compute_corpus_for_knowledge_engineering.ipynb
+++ b/ipython_notebooks/notebook editor for compute_corpus_for_knowledge_engineering.ipynb
@@ -127,7 +127,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "corpus_for_knowledge_engineering_df[\"doc_id\"] \u003d corpus_for_knowledge_engineering_df.index"
+        "corpus_for_knowledge_engineering_df.insert(0, \"doc_id\", \"doc\" + corpus_for_knowledge_engineering_df.index.astype(str))"
       ],
       "outputs": []
     },
@@ -136,7 +136,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "corpus_for_knowledge_engineering_df[\"text\"][2]"
+        "corpus_for_knowledge_engineering_df"
       ],
       "outputs": []
     },
