Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_nltk'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -52,7 +52,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd, numpy as np\nfrom dataiku import pandasutils as pdu\nimport nltk\nfrom nltk import word_tokenize, pos_tag"
+        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd, numpy as np\nfrom dataiku import pandasutils as pdu\nimport nltk\nfrom nltk import word_tokenize, pos_tag\n\nfrom nltk.tokenize import word_tokenize\n"
       ],
       "outputs": []
     },
@@ -96,6 +96,15 @@
       "metadata": {},
       "source": [
         "corpus_for_knowledge_engineering_df"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Define the function to extract nouns and return a DataFrame\ndef extract_nouns(doc_id, text):\n    words \u003d word_tokenize(text)\n    words_pos \u003d pos_tag(words)\n    nouns \u003d [(doc_id, word, pos) for word, pos in words_pos if pos.startswith(\u0027NN\u0027)]\n    return pd.DataFrame(nouns, columns\u003d[\u0027doc_id\u0027, \u0027word\u0027, \u0027tag\u0027])\n\n# Apply the function to each row and concatenate the results\npos_df \u003d pd.concat([extract_nouns(row[\u0027doc_id\u0027], row[\u0027text\u0027]) for _, row in df.iterrows()], ignore_index\u003dTrue)"
       ],
       "outputs": []
     },
