--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -140,7 +140,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "pos_df"
+        "pos_df.drop_duplicates()"
       ],
       "outputs": []
     },
@@ -149,7 +149,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "lower_pos_df"
+        "lower_pos_df.drop_duplicates()"
       ],
       "outputs": []
     },
@@ -158,7 +158,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "upper_pos_df"
+        "upper_pos_df.drop_duplicates()"
       ],
       "outputs": []
     },
