Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_nltk'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -140,7 +140,16 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "pos_df.drop_duplicates()"
+        "pos_df[\"string\"] \u003d pos_df[\"word\"].str.lower()\npos_df.drop_duplicates()"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        ""
       ],
       "outputs": []
     },
