Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_nltk'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -158,7 +158,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "lower_pos_df.drop_duplicates()"
+        "lower_pos_df[\"string\"] \u003d lower_pos_df[\"word\"].str.lower()\nlower_pos_df.drop_duplicates()"
       ],
       "outputs": []
     },
@@ -167,7 +167,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "upper_pos_df.drop_duplicates()"
+        "upper_pos_df[\"string\"] \u003d upper_pos_df[\"word\"].str.lower()\n\nupper_pos_df.drop_duplicates()"
       ],
       "outputs": []
     },
