Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_nltk'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -167,7 +167,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "upper_pos_df[\"string\"] \u003d upper_pos_df[\"word\"].str.lower()\n\nupper_pos_df.drop_duplicates()"
+        "upper_pos_df[\"string\"] \u003d upper_pos_df[\"word\"].str.lower()\nupper_pos_df.rename(columns\u003d{\u0027tag\u0027:\u0027upper_tag\u0027}, inplace\u003dTrue)\nupper_pos_df.drop_duplicates()"
       ],
       "outputs": []
     },
