--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -18,12 +18,6 @@
       "nbconvert_exporter": "python",
       "file_extension": ".py"
     },
-    "dkuGit": {
-      "lastInteraction": 0
-    },
-    "createdOn": 1738688431757,
-    "creator": "ludovic.bocken@cgi.com",
-    "associatedRecipe": "compute_nouns_extracted_with_nltk",
     "creationTag": {
       "versionNumber": 0,
       "lastModifiedBy": {
@@ -31,10 +25,16 @@
       },
       "lastModifiedOn": 1738688431757
     },
+    "createdOn": 1738688431757,
+    "creator": "ludovic.bocken@cgi.com",
+    "customFields": {},
     "tags": [
       "recipe-editor"
     ],
-    "customFields": {},
+    "dkuGit": {
+      "lastInteraction": 0
+    },
+    "associatedRecipe": "compute_nouns_extracted_with_nltk",
     "modifiedBy": "ludovic.bocken@cgi.com"
   },
   "nbformat": 4,
@@ -52,7 +52,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd, numpy as np\nfrom dataiku import pandasutils as pdu\nimport nltk\nfrom nltk import word_tokenize, pos_tag\n\nfrom nltk.tokenize import word_tokenize\n"
+        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd, numpy as np\nfrom dataiku import pandasutils as pdu\nimport nltk\nfrom nltk import word_tokenize, pos_tag\n\nfrom nltk.tokenize import word_tokenize"
       ],
       "outputs": []
     },
@@ -158,7 +158,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "lower_pos_df[\"string\"] \u003d lower_pos_df[\"word\"].str.lower()\nlower_pos_df.rename(columns\u003d{\u0027tag\u0027:\u0027upper_tag\u0027}, inplace\u003dTrue)\nlower_pos_df.drop(columns\u003d[\u0027word\u0027], inplace\u003dTrue)\n\n\nlower_pos_df.drop_duplicates()"
+        "lower_pos_df[\"string\"] \u003d lower_pos_df[\"word\"].str.lower()\nlower_pos_df.rename(columns\u003d{\u0027tag\u0027:\u0027upper_tag\u0027}, inplace\u003dTrue)\nlower_pos_df.drop(columns\u003d[\u0027word\u0027], inplace\u003dTrue)\nlower_pos_df.drop_duplicates()"
       ],
       "outputs": []
     },
@@ -168,6 +168,15 @@
       "metadata": {},
       "source": [
         "upper_pos_df[\"string\"] \u003d upper_pos_df[\"word\"].str.lower()\nupper_pos_df.rename(columns\u003d{\u0027tag\u0027:\u0027upper_tag\u0027}, inplace\u003dTrue)\nupper_pos_df.drop(columns\u003d[\u0027word\u0027], inplace\u003dTrue)\nupper_pos_df.drop_duplicates()"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        ""
       ],
       "outputs": []
     },
