Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_nltk'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -140,7 +140,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "pos_df[\"string\"] \u003d pos_df[\"word\"].str.lower()\npos_df.drop_duplicates()"
+        "pos_df[\"string\"] \u003d pos_df[\"word\"].str.lower()\npos_df \u003d pos_df.drop_duplicates()"
       ],
       "outputs": []
     },
@@ -176,7 +176,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        ""
+        "pd.merge(pos_df, lower_pos_df, on\u003d\u0027common_column\u0027)"
       ],
       "outputs": []
     },
