Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_nltk'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -100,6 +100,13 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Extract nouns"
+      ]
+    },
+    {
       "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
@@ -116,6 +123,31 @@
         "# Apply the function to each row and concatenate the results\npos_df \u003d pd.concat([extract_nouns(row[\u0027doc_id\u0027], row[\u0027text\u0027]) for _, row in corpus_for_knowledge_engineering_df.iterrows()], ignore_index\u003dTrue)"
       ],
       "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "pos_df[\"string\"] \u003d pos_df[\"word\"].str.lower()\npos_df \u003d pos_df.drop_duplicates()"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "pos_df"
+      ],
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Lower case"
+      ]
     },
     {
       "execution_count": 0,
@@ -140,15 +172,6 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "pos_df[\"string\"] \u003d pos_df[\"word\"].str.lower()\npos_df \u003d pos_df.drop_duplicates()"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
         ""
       ],
       "outputs": []
@@ -161,6 +184,13 @@
         "lower_pos_df[\"string\"] \u003d lower_pos_df[\"word\"].str.lower()\nlower_pos_df.rename(columns\u003d{\u0027tag\u0027:\u0027upper_tag\u0027}, inplace\u003dTrue)\nlower_pos_df.drop(columns\u003d[\u0027word\u0027], inplace\u003dTrue)\nlower_pos_df.drop_duplicates()"
       ],
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Upper case"
+      ]
     },
     {
       "execution_count": 0,
