--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -163,7 +163,25 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "lower_pos_df[\"string\"] \u003d lower_pos_df[\"word\"].str.lower()\nlower_pos_df.rename(columns\u003d{\u0027tag\u0027:\u0027upper_tag\u0027}, inplace\u003dTrue)\nlower_pos_df.drop(columns\u003d[\u0027word\u0027], inplace\u003dTrue)\nlower_pos_df \u003d lower_pos_df.drop_duplicates()\nlower_pos_df"
+        "lower_pos_df[\"string\"] \u003d lower_pos_df[\"word\"].str.lower()\nlower_pos_df.rename(columns\u003d{\u0027tag\u0027:\u0027lower_tag\u0027}, inplace\u003dTrue)\nlower_pos_df.drop(columns\u003d[\u0027word\u0027], inplace\u003dTrue)\nlower_pos_df \u003d lower_pos_df.drop_duplicates()"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "lower_pos_df"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "merged_pos_df \u003d pd.merge(pos_df, lower_pos_df, on\u003d\u0027string\u0027)"
       ],
       "outputs": []
     },
