Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_nltk'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -215,7 +215,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "upper_pos_df[\"string\"] \u003d upper_pos_df[\"word\"].str.lower()\nupper_pos_df.rename(columns\u003d{\u0027tag\u0027:\u0027upper_tag\u0027}, inplace\u003dTrue)\nupper_pos_df \u003d upper_pos_df.drop(columns\u003d[\u0027word\u0027], inplace\u003dTrue)\nupper_pos_df.drop_duplicates()"
+        "upper_pos_df[\"string\"] \u003d upper_pos_df[\"word\"].str.lower()\nupper_pos_df.rename(columns\u003d{\u0027tag\u0027:\u0027upper_tag\u0027}, inplace\u003dTrue)\nupper_pos_df.drop(columns\u003d[\u0027word\u0027], inplace\u003dTrue)\nupper_pos_df \u003d upper_pos_df.drop_duplicates()"
       ],
       "outputs": []
     },
@@ -224,25 +224,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "pd.merge(pos_df, lower_pos_df, on\u003d\u0027common_column\u0027)"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "# Function to extract nouns from text\ndef extract_nouns(text):\n    words \u003d word_tokenize(text)\n    words_pos \u003d pos_tag(words)\n    return words_pos"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "data \u003d extract_nouns(text)"
+        "merged_pos_df \u003d pd.merge(merged_pos_df, upper_pos_df, on\u003d\u0027string\u0027)"
       ],
       "outputs": []
     },
@@ -310,11 +292,18 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Write recipe outputs"
+      ]
+    },
+    {
       "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Write recipe outputs\nnouns_extracted_with_nltk \u003d dataiku.Dataset(\"nouns_extracted_with_nltk\")\nnouns_extracted_with_nltk.write_with_schema(nouns_extracted_with_nltk_df)"
+        "nouns_extracted_with_nltk \u003d dataiku.Dataset(\"nouns_extracted_with_nltk\")\nnouns_extracted_with_nltk.write_with_schema(nouns_extracted_with_nltk_df)"
       ],
       "outputs": []
     }
