Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_nltk'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -181,7 +181,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "merged_pos_df \u003d pd.merge(pos_df, lower_pos_df, on\u003d\u0027string\u0027)"
+        "merged_pos_df \u003d pd.merge(pos_df, lower_pos_df)"
       ],
       "outputs": []
     },
@@ -224,7 +224,16 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "merged_pos_df \u003d pd.merge(merged_pos_df, upper_pos_df, on\u003d\u0027string\u0027)"
+        "merged_pos_df \u003d pd.merge(merged_pos_df, upper_pos_df)"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "merged_pos_df.drop_duplicates()"
       ],
       "outputs": []
     },
