Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_nltk'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -233,7 +233,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "merged_pos_df.drop_duplicates()"
+        "nouns_extracted_with_nltk_df \u003d merged_pos_df.drop_duplicates()"
       ],
       "outputs": []
     },
