Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_nltk'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -242,61 +242,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "df \u003d pd.DataFrame(data, columns\u003d[\u0027word\u0027, \u0027tag\u0027])\ntags \u003d [\"NN\", \"NNS\", \"NNP\"]\ndf \u003d df[df[\"tag\"].isin(tags)]\ndf"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "pos_df \u003d corpus_for_knowledge_engineering_df[\u0027text\u0027].apply(extract_nouns)"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "pos_df"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "lower_pos_df \u003d corpus_for_knowledge_engineering_df[\u0027lower_text\u0027].apply(extract_nouns)"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "# Apply the function to the dataframe\ncorpus_for_knowledge_engineering_df[\u0027nouns\u0027] \u003d corpus_for_knowledge_engineering_df[\u0027text\u0027].apply(extract_nouns)"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "# Compute recipe outputs from inputs\nnouns_extracted_with_nltk_df \u003d corpus_for_knowledge_engineering_df[[\u0027nouns\u0027]]"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "nouns_extracted_with_nltk_df"
+        "nouns_extracted_with_nltk_df[\"string\"].rename_axis(\u0027unique_values\u0027).reset_index(name\u003d\u0027counts\u0027)\n"
       ],
       "outputs": []
     },
