--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -251,7 +251,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "nouns_extracted_with_nltk_df[\"string\"].rename_axis(\u0027unique_values\u0027).reset_index(name\u003d\u0027counts\u0027)"
+        "nouns_extracted_with_nltk_df[\"string\"].value_counts().rename_axis(\u0027unique_values\u0027).reset_index(name\u003d\u0027counts\u0027)"
       ],
       "outputs": []
     },
