Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_nltk'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -251,7 +251,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "frequency \u003d nouns_extracted_with_nltk_df[\"string\"].value_counts().rename_axis(\u0027unique_values\u0027).reset_index(name\u003d\u0027counts\u0027)"
+        "nouns_frequency_df \u003d nouns_extracted_with_nltk_df[\"string\"].value_counts().rename_axis(\u0027string\u0027).reset_index(name\u003d\u0027frequency\u0027)"
       ],
       "outputs": []
     },
@@ -260,7 +260,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "frequency \u003d frequency[frequency[\"frequency\"] \u003e 1]\nfrequency.columns \u003d [\u0027string\u0027, \u0027frequency\u0027]"
+        "nouns_frequency_df"
       ],
       "outputs": []
     },
@@ -269,7 +269,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "\n\n# Calculate relative frequency\ntotal_count \u003d frequency[\u0027frequency\u0027].sum()\nfrequency[\u0027relative_frequency\u0027] \u003d frequency[\u0027frequency\u0027] / total_count\n\n# Rank the strings by frequency\nfrequency[\u0027rank\u0027] \u003d frequency[\u0027frequency\u0027].rank(method\u003d\u0027min\u0027, ascending\u003dFalse)\n\n# Sort by string in ascending order before calculating cumulative sum\nfrequency \u003d frequency.sort_values(by\u003d\u0027frequency\u0027, ascending\u003dFalse)\n\n# Calculate cumulative sum of frequencies\nfrequency[\u0027cumulative_sum\u0027] \u003d frequency[\u0027frequency\u0027].cumsum()\n\n# Calculate pareto as cumulative_sum percentage\nfrequency[\u0027pareto\u0027] \u003d (frequency[\u0027cumulative_sum\u0027] / total_count) * 100"
+        "nouns_frequency_df \u003d nouns_frequency_df[nouns_frequency_df[\"frequency\"] \u003e 1]\nnouns_frequency_df.columns \u003d [\u0027string\u0027, \u0027frequency\u0027]"
       ],
       "outputs": []
     },
@@ -278,7 +278,16 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "frequency"
+        "# Calculate relative frequency\ntotal_count \u003d nouns_frequency_df[\u0027frequency\u0027].sum()\nnouns_frequency_df[\u0027relative_frequency\u0027] \u003d nouns_frequency_df[\u0027frequency\u0027] / total_count\n\n# Rank the strings by frequency\nnouns_frequency_df[\u0027rank\u0027] \u003d nouns_frequency_df[\u0027frequency\u0027].rank(method\u003d\u0027min\u0027, ascending\u003dFalse)\n\n# Sort by string in ascending order before calculating cumulative sum\nnouns_frequency_df \u003d nouns_frequency_df.sort_values(by\u003d\u0027frequency\u0027, ascending\u003dFalse)\n\n# Calculate cumulative sum of frequencies\nnouns_frequency_df[\u0027cumulative_sum\u0027] \u003d nouns_frequency_df[\u0027frequency\u0027].cumsum()\n\n# Calculate pareto as cumulative_sum percentage\nnouns_frequency_df[\u0027pareto\u0027] \u003d (nouns_frequency_df[\u0027cumulative_sum\u0027] / total_count) * 100"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "nouns_frequency_df"
       ],
       "outputs": []
     },
