Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_nltk'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -287,7 +287,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "nouns_frequency_df"
+        "nouns_frequency_df[nouns_frequency_df[\"pareto\"] \u003c 80]"
       ],
       "outputs": []
     },
@@ -303,7 +303,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "nouns_extracted_with_nltk \u003d dataiku.Dataset(\"nouns_extracted_with_nltk\")\nnouns_extracted_with_nltk.write_with_schema(nouns_extracted_with_nltk_df)"
+        "nouns_extracted_with_nltk \u003d dataiku.Dataset(\"nouns_extracted_with_nltk\")\nnouns_extracted_with_nltk.write_with_schema(nouns_frequency_df)"
       ],
       "outputs": []
     }
