Saved Jupyter notebook 'notebook editor for compute_dictionaries_of_aviation'

--- a/ipython_notebooks/notebook editor for compute_dictionaries_of_aviation.ipynb
+++ b/ipython_notebooks/notebook editor for compute_dictionaries_of_aviation.ipynb
@@ -53,7 +53,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Read recipe inputs\nDictionaries \u003d dataiku.Folder(\"PP5gsWW1\")\nDictionaries_info \u003d Dictionaries.get_info()\n\n# Initialize an empty list to store data\ndata \u003d []\n\n# Iterate through the files in the folder\nfor file_path in Dictionaries.list_paths_in_partition():\n    with Dictionaries.get_download_stream(file_path) as f:\n        # Read the PDF file\n        reader \u003d PyPDF2.PdfFileReader(f)\n        text \u003d \"\"\n        for page_num in range(reader.numPages):\n            page \u003d reader.getPage(page_num)\n            text +\u003d page.extract_text()\n        data.append({\"file_path\": file_path, \"content\": text})\n\n# Convert the list to a dataframe\ndictionaries_of_aviation_df \u003d pd.DataFrame(data)\n\n\n"
+        "import dataiku\nimport fitz  # PyMuPDF\nimport pandas as pd\n\n# Read recipe inputs\nDictionaries \u003d dataiku.Folder(\"PP5gsWW1\")\nDictionaries_info \u003d Dictionaries.get_info()\n\n# Initialize an empty list to store data\ndata \u003d []\n\n# Iterate through the files in the folder\nfor file_path in Dictionaries.list_paths_in_partition():\n    with Dictionaries.get_download_stream(file_path) as f:\n        # Open the PDF file\n        pdf_document \u003d fitz.open(stream\u003df.read(), filetype\u003d\"pdf\")\n        text \u003d \"\"\n        for page_num in range(len(pdf_document)):\n            page \u003d pdf_document[page_num]\n            text +\u003d page.get_text()\n        data.append({\"file_path\": file_path, \"content\": text})\n\n# Convert the list to a dataframe\ndictionaries_of_aviation_df \u003d pd.DataFrame(data)\n"
       ],
       "outputs": []
     },
@@ -62,7 +62,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "pip install PyPDF2"
+        "dictionaries_of_aviation_df"
       ],
       "outputs": []
     },
